--- a/app/views/ado-landing-pages/partials/_header.html.erb
+++ b/app/views/ado-landing-pages/partials/_header.html.erb
@@ -23,7 +23,7 @@
           <li><a href="<%= thredded_url %>">Community</a></li>
           <li><a href="#contact">Contact</a></li>
           <%#<li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>%>
-          <li class="buy-tickets"><a href="<%= activation_url %>">Buy Tickets</a></li>
+          <li class="buy-tickets"><a href="<%= activation_url %>">Buy Licenses</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
