steps guide, using toaster to flash messages

--- a/app/views/ado-landing-pages/index.html.erb
+++ b/app/views/ado-landing-pages/index.html.erb
@@ -1,16 +1,17 @@
 
 <% content_for :header do %>
-  <%= render 'ado-landing-pages/partials/header' %>
+  <%= render 'ado-landing-pages/partials/intro_header' %>
 <% end %>
 
 <% content_for :content do %>
   <%= render 'ado-landing-pages/partials/intro' %>
   <%= render 'ado-landing-pages/partials/about' %>
-  <%= render 'ado-landing-pages/partials/speakers' %>
-  <%= render 'ado-landing-pages/partials/schedule' %>
-  <%= render 'ado-landing-pages/partials/venue' %>
-  <%= render 'ado-landing-pages/partials/gallery' %>
-  <%= render 'ado-landing-pages/partials/contact' %>
+  <%= render 'ado-landing-pages/partials/features' %>
+  <%= render 'ado-landing-pages/partials/how_it_works' %>
+  <%#<%= render 'ado-landing-pages/partials/venue' %>
+  <%#<%= render 'ado-landing-pages/partials/gallery' %>
+  <%#<%= render 'ado-landing-pages/partials/contact' %>
+  <%= render 'ado-landing-pages/partials/buy_now' %>
 <% end %>
 
 <% content_for :footer do %>
