--- a/app/views/ado-landing-pages/partials/_intro.html.erb
+++ b/app/views/ado-landing-pages/partials/_intro.html.erb
@@ -1,10 +1,10 @@
 <section id="intro" style="background-image: url(/assets/ado-landing-pages/header.jpg);">
   <div class="intro-container wow fadeIn">
-    <h1 class="mb-4 pb-0">The Annual<br><span>Marketing</span> Conference</h1>
-    <p class="mb-4 pb-0">10-12 December, Downtown Conference Center, New York</p>
-    <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video"
+    <h1 class="mb-4 pb-0">AdoPiSoft<br><span>WiFi Hostpot</span> Management System</h1>
+    <p class="mb-4 pb-0">Simple yet effective management software for coin-operated WiFi hotspot machines.</p>
+    <a href="https://www.youtube.com/watch?v=oNyNl_U1_BI" class="venobox play-btn mb-4" data-vbtype="video"
                                                                                         data-autoplay="true"></a>
-    <a href="#about" class="about-btn scrollto">About The Event</a>
+    <a href="#about" class="about-btn scrollto">Learn More</a>
   </div>
 </section>
 
