--- a/app/views/ado-landing-pages/partials/_flash.html.erb
+++ b/app/views/ado-landing-pages/partials/_flash.html.erb
@@ -1,8 +1,8 @@
 
   <% flash.each do |key, value| %>
-    <div class="<%= flash_class(key) %>">
-      <%= value %>
-    </div>
+    <script>
+      $(function () { toastr["<%= toastr_method(key) %>"]("<%= value %>") });
+    </script>
   <% end %>
 
 
