--- a/app/views/ado-landing-pages/partials/_header.html.erb
+++ b/app/views/ado-landing-pages/partials/_header.html.erb
@@ -1,6 +1,4 @@
-<!--==========================
-  Header
-  ============================-->
+<div class="dark-header" style="margin-bottom: 120px;">
   <header id="header">
     <div class="container">
 
@@ -12,17 +10,10 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#intro">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#speakers">Speakers</a></li>
-          <li><a href="#schedule">Schedule</a></li>
-          <li><a href="#venue">Venue</a></li>
-          <li><a href="#hotels">Hotels</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li><a href="#sponsors">Sponsors</a></li>
+          <li class="<%= controller?(:static) && action?(:landing)? 'menu-active' : '' %>"><a href="<%= root_url %>#intro">Home</a></li>
           <li><a href="<%= thredded_url %>">Community</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <%#<li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>%>
+          <li><a href="#">Downloads</a></li>
+          <%= render 'ado-landing-pages/partials/signup_nav_item' %>
           <li class="buy-tickets"><a href="<%= activation_url %>">Buy Licenses</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -30,3 +21,4 @@
   </header><!-- #header -->
 
 
+</div>
