--- a/app/views/ado-landing-pages/partials/_venue.html.erb
+++ b/app/views/ado-landing-pages/partials/_venue.html.erb
@@ -33,64 +33,64 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/1.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/1.jpg" alt="" class="img-fluid">
+              <a href="assets/ado-landing-pages/venue-gallery/1.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/ado-landing-pages/venue-gallery/1.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/2.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/2.jpg" alt="" class="img-fluid">
+              <a href="assets/ado-landing-pages/venue-gallery/2.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/ado-landing-pages/venue-gallery/2.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/3.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/3.jpg" alt="" class="img-fluid">
+              <a href="assets/ado-landing-pages/venue-gallery/3.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/ado-landing-pages/venue-gallery/3.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/4.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/4.jpg" alt="" class="img-fluid">
+              <a href="assets/ado-landing-pages/venue-gallery/4.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/ado-landing-pages/venue-gallery/4.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/5.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/5.jpg" alt="" class="img-fluid">
+              <a href="assets/ado-landing-pages/venue-gallery/5.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/ado-landing-pages/venue-gallery/5.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/6.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/6.jpg" alt="" class="img-fluid">
+              <a href="assets/ado-landing-pages/venue-gallery/6.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/ado-landing-pages/venue-gallery/6.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/7.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/7.jpg" alt="" class="img-fluid">
+              <a href="assets/ado-landing-pages/venue-gallery/7.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/ado-landing-pages/venue-gallery/7.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="img/venue-gallery/8.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/venue-gallery/8.jpg" alt="" class="img-fluid">
+              <a href="assets/ado-landing-pages/venue-gallery/8.jpg" class="venobox" data-gall="venue-gallery">
+                <img src="assets/ado-landing-pages/venue-gallery/8.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
