--- a/app/views/ado-landing-pages/partials/_features.html.erb
+++ b/app/views/ado-landing-pages/partials/_features.html.erb
@@ -2,7 +2,7 @@
 <!--==========================
   Speakers Section
   ============================-->
-  <section id="speakers" class="wow fadeIn">
+  <section id="features" class="wow fadeIn">
     <div class="container">
       <div class="section-header">
         <h2>Key Features</h2>
