--- a/app/views/ado-landing-pages/partials/_how_it_works.html.erb
+++ b/app/views/ado-landing-pages/partials/_how_it_works.html.erb
@@ -2,8 +2,8 @@
 <!--==========================
   Schedule Section
   ============================-->
-  <section id="schedule" class="section-with-bg">
-    <div class="container wow fadeInUp">
+  <section id="how" class="section-with-bg">
+    <div class="container wow fadeIn">
       <div class="section-header">
         <h2>How It Works?</h2>
         <p>Learn how easy it is for customers to use the system in these simple steps.</p>
