--- a/app/views/ado-landing-pages/partials/_intro_header.html.erb
+++ b/app/views/ado-landing-pages/partials/_intro_header.html.erb
@@ -17,7 +17,7 @@
         <%#<li><a href="#hotels">Hotels</a></li>%>
         <%#<li><a href="#gallery">Gallery</a></li>%>
         <li><a href="<%= thredded_url %>">Community</a></li>
-        <%#<li><a href="#contact">Contact</a></li>%>
+        <li><a href="#contact">Downloads</a></li>
         <%= render 'ado-landing-pages/partials/signup_nav_item' %>
         <li class="buy-tickets"><a href="<%= activation_url %>">Buy Licenses</a></li>
       </ul>
