using view helpers

--- a/app/views/ado-landing-pages/partials/_buy_now.html.erb
+++ b/app/views/ado-landing-pages/partials/_buy_now.html.erb
@@ -2,7 +2,7 @@
   <h2>Is it worth to start wifi hotspot business?</h2>
   <p>
   Our average WiFi hotspot owners earns <strong><%= number_to_currency(500, unit: 'Php') %> to <%= number_to_currency(1000, unit: "Php") %></strong> and more daily. While initial investment is only around <%= number_to_currency(15000, unit: "Php") %> - <%= number_to_currency(20000, unit: 'Php') %>.
-  Maintenance of the machine is very easy and can be done by yourself since we have a vast amount of easy to follow tutorials and an active and supportive <%= link_to "community", thredded_url %> composed of novice to advanced users of the system. Plus we try our best to promptly answer your questions in the forum and via email (support@adopisowifi.com).
+  Maintenance of the machine is very easy and can be done by yourself since we have a vast amount of easy to follow tutorials and an active and supportive <%= link_to "community", thredded_url %> composed of novice to advanced users of the system. Plus we try our best to promptly answer your questions in the forum and via email (<%= support_email %>).
   </p>
   <%= link_to "Get Started", buy_url, class: "btn btn-lg btn-success" %>
 </div>
