--- a/app/views/ado-landing-pages/partials/_footer.html.erb
+++ b/app/views/ado-landing-pages/partials/_footer.html.erb
@@ -16,7 +16,7 @@
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= guide_url %>">Basic Setup Guide</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
@@ -30,7 +30,7 @@
             Cebu PH 6005<br>
             Philippines <br>
             <%#<strong>Phone:</strong> +1 5589 55488 55<br>%>
-            <strong>Email:</strong> <a href="mailto:support@adopisowifi.com">support@adopisowifi.com</a><br>
+            <strong>Email:</strong> <a href="mailto:<%= support_email %>"><%= support_email %></a><br>
             </p>
 
             <div class="social-links">
