--- a/app/views/ado-landing-pages/partials/_intro.html.erb
+++ b/app/views/ado-landing-pages/partials/_intro.html.erb
@@ -1,6 +1,6 @@
 <section id="intro" style="background-image: url(/assets/ado-landing-pages/header.jpg);">
   <div class="intro-container wow fadeIn">
-    <h1 class="mb-4 pb-0">AdoPiSoft<br><span>WiFi Hostpot</span> Management System</h1>
+    <h1 class="mb-4 pb-0"><%= app_name %><br><span>WiFi Hostpot</span> Management System</h1>
     <p class="mb-4 pb-0">Simple yet effective management software for coin-operated WiFi hotspot machines.</p>
     <a href="https://www.youtube.com/watch?v=oNyNl_U1_BI" class="venobox play-btn mb-4" data-vbtype="video"
                                                                                         data-autoplay="true"></a>
