--- a/app/views/layouts/ado-landing-pages.html.erb
+++ b/app/views/layouts/ado-landing-pages.html.erb
@@ -15,7 +15,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
 
-    <%= stylesheet_link_tag "ado-landing-pages", media: "all" %>
+    <%= stylesheet_link_tag "ado-landing-pages", media: "all", 'data-turbolinks-track': 'reload' %>
 
     <%= yield :head %>
     <!-- =======================================================
