move warning partials here

--- a/app/views/ado-landing-pages/distributors.html.erb
+++ b/app/views/ado-landing-pages/distributors.html.erb
@@ -4,7 +4,7 @@
   </script>
 <% end %>
 
-<%= render 'partials/machine_issues' %>
+<%= render 'ado-landing-pages/partials/machine_issues' %>
 
 <h2>Official Distributors List</h2>
 <hr>
