--- a/app/views/ado-landing-pages/guide.html.erb
+++ b/app/views/ado-landing-pages/guide.html.erb
@@ -12,7 +12,7 @@ This is a basic guide on how to flash <%= app_name %> software into <strong>Rasp
 If you want a production-ready wifi hotspot machine, please <%= link_to "contact the distributors", buy_url %>.
 </p>
 
-<%= render 'partials/diy_warning' %>
+<%= render 'ado-landing-pages/partials/diy_warning' %>
 
 <div class="container guide">
 
