--- a/app/views/ado-landing-pages/partials/_machine_issues.html.erb
+++ b/app/views/ado-landing-pages/partials/_machine_issues.html.erb
@@ -1,4 +1,4 @@
-<div class="alert alert-danger">
+<div class="alert alert-info">
   <p>
   <strong><%= app_name %></strong> is not responsible for the following issues:
   </p>
@@ -17,6 +17,5 @@
   <p>
   If you have problem or issues with your machine bought from distributors, please <a href="<%= buy_url %>">contact the distributor</a> or ask in the <%= link_to "forum", thredded_url %>. Sellers/distributors buy our software to manufacture their product. We are not liable for any transactions between the buyer and distributor.
   </p>
-
 
 </div>
