--- a/app/views/ado-landing-pages/partials/_intro_header.html.erb
+++ b/app/views/ado-landing-pages/partials/_intro_header.html.erb
@@ -14,7 +14,7 @@
         <li><a href="#features">Features</a></li>
         <li><a href="#how">How It Works</a></li>
         <li><a href="<%= thredded_url %>">Forum</a></li>
-        <li><a href="#contact">Downloads</a></li>
+        <li><a href="<%= downloads_url %>">Downloads</a></li>
         <%= render 'ado-landing-pages/partials/signup_nav_item' %>
         <li class="buy-tickets"><a href="<%= activation_url %>">Buy Licenses</a></li>
       </ul>
