--- a/app/views/ado-landing-pages/partials/_footer.html.erb
+++ b/app/views/ado-landing-pages/partials/_footer.html.erb
@@ -15,9 +15,10 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="<%= root_url %>">Home</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= guide_url %>">Basic Setup Guide</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= thredded_url %>">Forum</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= buy_url %>">Distributors List</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= guide_url %>">Basic Setup Guide</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= downloads_url %>">Downloads</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
