--- a/app/views/ado-landing-pages/downloads.html.erb
+++ b/app/views/ado-landing-pages/downloads.html.erb
@@ -7,7 +7,7 @@
   <h3>Booting from USB Mass Storage</h3>
   <p class="alert alert-info"><strong>NOTE: This is only for RPI 3. RPI 3+ already boots from USB out of the box.</strong><br>To boot from USB, install first the image to sd card and boot your RPI. After successful boot from SD card, install the image again this time to your USB flash drive. Remove the SD card from RPI and insert the USB flash drive. Finally, boot your RPI with only your USB flash drive.</p>
   <hr>
-  <h3>Change Logs</h3><a href="/changelogs/">View software change logs</a>
+  <h3>Change Logs</h3><a href="<%= changelogs_url %>">View software change logs</a>
   <hr>
   <h3>Installatin Guide</h3>
   <p>Download the installtion guide in PDF format - <a target="_blank" href="/downloads/adopisowifi-guide.pdf">Installation Guide (PDF)</a></p>
