--- a/app/views/ado-landing-pages/distributors.html.erb
+++ b/app/views/ado-landing-pages/distributors.html.erb
@@ -1,9 +1,3 @@
-<% content_for :head do %>
-  <script>
-    window.DISTRIBUTORS = <%= raw @distributors.to_json(only: [:website_url, :website_name, :display_name], include: [:user]) %>;
-  </script>
-<% end %>
-
 <%= render 'ado-landing-pages/partials/machine_issues' %>
 
 <h2>Official Distributors List</h2>
@@ -14,7 +8,20 @@ Machines are built and assembled by distributors. Each may have different design
 <p>
 
 
-<div ng-app="AdoDistributors" ng-controller="DistributorsCtrl">
+<div id="distributors" ng-controller="DistributorsCtrl">
+
+  <script type="text/ng-template" id="list.html">
+    <tr ng-repeat="d in distributors | filter:searchText" ng-if="(distributors | filter:searchText).length > 0">
+          <td ng-if="!d.display_name">{{d.user.first_name}} {{d.user.last_name}}</td>
+          <td ng-if="d.display_name">{{d.display_name}}</td>
+          <td>{{d.user.address}}</td>
+          <td>{{d.user.contact_number}}</td>
+          <td>
+            <a ng-if="d.website_url && d.website_name" ng-href="{{d.website_url}}" target="_blank">{{d.website_name}}</a>
+          </td>
+          <td><a ng-href="mailto:{{d.user.email}}">{{d.user.email}}</a></td>
+        </tr>
+  </script>
 
   <form>
     <div class="form-group">
@@ -37,18 +44,42 @@ Machines are built and assembled by distributors. Each may have different design
         <th>Email</th>
       </tr>
     </thead>
-    <tbody>
-      <tr ng-repeat="d in distributors | filter:searchText" ng-if="(distributors | filter:searchText).length > 0">
-        <td ng-if="!d.display_name">{{d.user.first_name}} {{d.user.last_name}}</td>
-        <td ng-if="d.display_name">{{d.display_name}}</td>
-        <td>{{d.user.address}}</td>
-        <td>{{d.user.contact_number}}</td>
-        <td>
-          <a ng-if="d.website_url && d.website_name" ng-href="{{d.website_url}}" target="_blank">{{d.website_name}}</a>
-        </td>
-        <td><a ng-href="mailto:{{d.user.email}}">{{d.user.email}}</a></td>
-      </tr>
+    <tbody ng-include="'list.html'">
+      <% @distributors.each do |d| %>
+        <tr>
+          <% if !d.display_name %>
+            <td><%= "#{d.user.first_name} #{d.user.last_name}" %></td>
+          <% else %>
+            <td><%= d.display_name %></td>
+          <% end %>
+          <td><%= d.user.address %></td>
+          <td><%= d.user.contact_number %></td>
+          <td>
+            <% if d.website_url %>
+              <a href="<%= d.website_url %>" target="_blank"><%= d.website_name %></a>
+            <% end %>
+          </td>
+          <td><a href="mailto:<%= d.user.email %>"><%= d.user.email %></a></td>
+        </tr>
+
+      <% end %>
     </tbody>
   </table>
 </div>
+
+<% content_for :javascripts do %>
+  <script type="text/javascript">
+    $(function () {
+      angular.module('AdoDistributors', []).controller('DistributorsCtrl', [
+        '$scope',
+        function ($scope) {
+          $scope.distributors = <%= raw @distributors.to_json(only: [:website_url, :website_name, :display_name], include: [:user]) %>;
+        }
+      ]);
+
+      angular.bootstrap(window.document.getElementById("distributors"), ["AdoDistributors"]);
+
+    });
+  </script>
+<% end %>
 
