--- a/app/views/ado-landing-pages/partials/_intro.html.erb
+++ b/app/views/ado-landing-pages/partials/_intro.html.erb
@@ -4,7 +4,7 @@
     <p class="mb-4 pb-0">Simple yet effective management software for coin-operated WiFi hotspot machines.</p>
     <a href="https://www.youtube.com/watch?v=oNyNl_U1_BI" class="venobox play-btn mb-4" data-vbtype="video"
                                                                                         data-autoplay="true"></a>
-    <a href="#about" class="about-btn scrollto">Learn More</a>
+    <a href="#how" class="about-btn scrollto">Learn More</a>
   </div>
 </section>
 
