--- a/app/views/ado-landing-pages/partials/_features.html.erb
+++ b/app/views/ado-landing-pages/partials/_features.html.erb
@@ -5,8 +5,8 @@
   <section id="features" class="wow fadeIn">
     <div class="container">
       <div class="section-header">
-        <h2>Key Features</h2>
-        <p>Here are some of our software key features</p>
+        <h2>Features</h2>
+        <p>Some highlights of our software features</p>
       </div>
 
       <div class="row">
