--- a/app/views/ado-landing-pages/partials/_header.html.erb
+++ b/app/views/ado-landing-pages/partials/_header.html.erb
@@ -11,6 +11,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="<%= controller?(:static) && action?(:landing)? 'menu-active' : '' %>"><a href="<%= root_url %>#intro">Home</a></li>
+          <li><a href="<%= lines_url %>">Articles</a></li>
           <li><a href="<%= thredded_url %>">Forum</a></li>
           <li><a href="<%= downloads_url %>">Downloads</a></li>
           <%= render 'ado-landing-pages/partials/signup_nav_item' %>
