--- a/app/views/ado-landing-pages/partials/_footer.html.erb
+++ b/app/views/ado-landing-pages/partials/_footer.html.erb
@@ -7,7 +7,7 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <%= image_tag "img/logo.png", alt: app_name %>
+            <%= image_tag "ado-landing-pages/logo.png", alt: app_name %>
             <%= render 'ado-landing-pages/partials/about_text' %>
           </div>
 
