--- a/app/views/ado-landing-pages/partials/_header.html.erb
+++ b/app/views/ado-landing-pages/partials/_header.html.erb
@@ -5,7 +5,9 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="<%= root_url %>#intro" class="scrollto"><img src="/assets/img/logo.png" alt="" title=""></a>
+        <a href="<%= root_url %>#intro" class="scrollto">
+          <%= image_tag "ado-landing-pages/logo.png", alt: app_name %>
+        </a>
       </div>
 
       <nav id="nav-menu-container">
