--- a/app/views/ado-landing-pages/partials/_intro.html.erb
+++ b/app/views/ado-landing-pages/partials/_intro.html.erb
@@ -1,4 +1,4 @@
-<section id="intro" style="background-image: url(/assets/ado-landing-pages/header.jpg);">
+<section id="intro">
   <div class="intro-container wow fadeIn">
     <h1 class="mb-4 pb-0"><%= app_name %><br><span>WiFi Hostpot</span> Management System</h1>
     <p class="mb-4 pb-0">Simple yet effective management software for coin-operated WiFi hotspot machines.</p>
