--- a/app/views/ado-landing-pages/partials/_about.html.erb
+++ b/app/views/ado-landing-pages/partials/_about.html.erb
@@ -1,4 +1,4 @@
-<section id="about" style="background-image: url('/assets/ado-landing-pages/about-bg.jpg');">
+<section id="about">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
