include remote monitor url

--- a/app/views/ado-landing-pages/partials/_footer.html.erb
+++ b/app/views/ado-landing-pages/partials/_footer.html.erb
@@ -18,7 +18,7 @@
               <li><i class="fa fa-angle-right"></i> <a href="<%= lines_url %>">Articles</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= thredded_url %>">Forum</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= downloads_url %>">Downloads</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= guide_url %>">Setup Guide</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= monitor_url %>">Remote Monitoring</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= buy_url %>">Distributors</a></li>
             </ul>
           </div>
