--- a/app/views/ado-landing-pages/partials/_intro_header.html.erb
+++ b/app/views/ado-landing-pages/partials/_intro_header.html.erb
@@ -17,6 +17,7 @@
         <li><a href="#how">How It Works</a></li>
         <li><a href="<%= lines_url %>">Articles</a></li>
         <li><a href="<%= thredded_url %>">Forum</a></li>
+          <li><a href="<%= monitor_url %>">Remote</a></li>
         <li><a href="<%= downloads_url %>">Downloads</a></li>
         <%= render 'ado-landing-pages/partials/signup_nav_item' %>
         <li class="buy-tickets"><a href="<%= activation_url %>">Buy Licenses</a></li>
