--- a/app/views/ado-landing-pages/partials/_footer.html.erb
+++ b/app/views/ado-landing-pages/partials/_footer.html.erb
@@ -14,12 +14,12 @@
           <div class="col-lg-4 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= root_url %>">Home</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= lines_url %>">Articles</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= thredded_url %>">Forum</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= downloads_url %>">Downloads</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= monitor_url %>">Remote Monitoring</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= buy_url %>">Distributors</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.root_url %>">Home</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.lines_url %>">Articles</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.thredded_url %>">Forum</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.downloads_url %>">Downloads</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.monitor_url %>">Remote Monitoring</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.buy_url %>">Distributors</a></li>
             </ul>
           </div>
 
