--- a/app/views/ado-landing-pages/partials/_about_text.html.erb
+++ b/app/views/ado-landing-pages/partials/_about_text.html.erb
@@ -2,5 +2,5 @@
 <strong><%= app_name %></strong> (formerly AdoPisoWiFi) is the leading management software for coin-operated WiFi hotspot machines in the Philippines. Designed to be easy to use even for non-technical individuals with room for advanced settings and configuration.
 </P>
 <p>
-Manage your bandwidth, users and rates anytime, anywhere with our <%= link_to "remote management tool", "/monitor" %>. Be part of our huge and helpful <%= link_to "community", thredded_url %> and post your questions, suggestions and ideas to improve the system.
+Manage your bandwidth, users and rates anytime, anywhere with our <%= link_to "remote management tool", "/monitor" %>. Be part of our huge and helpful <%= link_to "community", main_app.thredded_url %> and post your questions, suggestions and ideas to improve the system.
 <p>
