--- a/app/views/ado-landing-pages/partials/_contact.html.erb
+++ b/app/views/ado-landing-pages/partials/_contact.html.erb
@@ -24,7 +24,7 @@
           <div class="contact-email">
             <i class="ion-ios-email-outline"></i>
             <h3>Email</h3>
-            <p><a href="mailto:support@adopisowifi.com">support@adopisowifi.com</a></p>
+            <p><a href="mailto:<%= support_email %>"><%= support_email %></a></p>
           </div>
         </div>
 
