--- a/app/views/ado-landing-pages/partials/_footer.html.erb
+++ b/app/views/ado-landing-pages/partials/_footer.html.erb
@@ -15,6 +15,7 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.root_url %>">Home</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.guide_url %>">Installation Guide</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.lines_url %>">Articles</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.thredded_url %>">Forum</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.downloads_url %>">Downloads</a></li>
