--- a/app/views/ado-landing-pages/partials/_footer.html.erb
+++ b/app/views/ado-landing-pages/partials/_footer.html.erb
@@ -18,8 +18,8 @@
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.guide_url %>">Installation Guide</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.lines_url %>">Articles</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.thredded_url %>">Forum</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.downloads_url %>">Downloads</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.monitor_url %>">Remote Monitoring</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.downloads_url %>">Downloads</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.buy_url %>">Distributors</a></li>
             </ul>
           </div>
@@ -37,7 +37,7 @@
 
             <div class="social-links">
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://facebook.com/groups/adopisowificommunity" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
