--- a/app/views/layouts/ado-landing-pages.html.erb
+++ b/app/views/layouts/ado-landing-pages.html.erb
@@ -37,7 +37,7 @@
     <% if content_for?(:content) %>
       <%= yield :content %>
     <% else %>
-      <div class="container">
+      <div class="container section">
         <%= yield %>
       </div>
     <% end %>
