fix links to www

--- a/app/views/ado-landing-pages/checkout/index.html.erb
+++ b/app/views/ado-landing-pages/checkout/index.html.erb
@@ -130,7 +130,7 @@
     Once activated, the software will not ask again for activation key even if you reinstall the software image to sd card.
     The license is bound to the Micro SD card so make sure to <b>use a high quality sd card</b>. A good sd card will last for many years.
     In case the sd card is broken, you can transfer the license to the new sd card by <b>revoking the license</b> in the
-    <a href="https://monitor.adopisowifi.com">AdoPisoWiFi Remote Management</a>. Prices of our online services may change without prior notice.
+    <a href="<%= main_app.monitor_url %>">AdoPisoWiFi Remote Management</a>. Prices of our online services may change without prior notice.
     </p>
   </section>
 
