--- a/app/views/ado-landing-pages/partials/_machine_issues.html.erb
+++ b/app/views/ado-landing-pages/partials/_machine_issues.html.erb
@@ -1,6 +1,6 @@
 <div class="alert alert-info">
   <p>
-  <strong><%= app_name %></strong> is not responsible for the following issues:
+  <em><%= app_name %></em> is <strong>not responsible</strong> for the following matters:
   </p>
   <ul>
     <li>
