--- a/app/views/ado-landing-pages/partials/_footer.html.erb
+++ b/app/views/ado-landing-pages/partials/_footer.html.erb
@@ -14,13 +14,13 @@
           <div class="col-lg-4 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.root_url %>">Home</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.guide_url %>">Installation Guide</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.lines_url %>">Articles</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.root_url(subdomain: "www") %>">Home</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.guide_url(subdomain: "www") %>">Installation Guide</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.lines_url(subdomain: "www") %>">Articles</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.thredded_url %>">Forum</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.monitor_url %>">Remote Monitoring</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.downloads_url %>">Downloads</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.buy_url %>">Distributors</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.downloads_url(subdomain: "www") %>">Downloads</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="<%= main_app.buy_url(subdomain: "www") %>">Distributors</a></li>
             </ul>
           </div>
 
