--- a/app/views/layouts/ado-landing-pages.html.erb
+++ b/app/views/layouts/ado-landing-pages.html.erb
@@ -37,8 +37,10 @@
     <% if content_for?(:content) %>
       <%= yield :content %>
     <% else %>
-      <div class="container section">
+      <div class="container">
+        <div class="section">
         <%= yield %>
+        </div>
       </div>
     <% end %>
 
