rename image asset

--- a/app/views/ado-landing-pages/guide.html.erb
+++ b/app/views/ado-landing-pages/guide.html.erb
@@ -74,7 +74,7 @@ If you want a production-ready wifi hotspot machine, please <%= link_to "contact
   <p>After downloading the needed softwares, we need to flash the installer into the midro SD card using Etcher. To do so, unzip the contents of<code>adopisowifi.zip</code></p>
   <p>Insert the micro SD card into the your computer using a card reader.</p>
   <p>Open Etcher and click <code>Select Image.</code></p>
-  <%= image_tag "ado-landing-pages/etcher/select-image.jpeg", class: "etcher" %>
+  <%= image_tag "ado-landing-pages/etcher/select-image.jpg", class: "etcher" %>
   <hr>
   <p> Then select <code>adopisowifi-(version).img</code> from the zip file.</p>
   <%#<img src="/img/etcher/select-adopisowifi-img.png" class="default-img">%>
