--- a/app/views/ado-landing-pages/partials/_header.html.erb
+++ b/app/views/ado-landing-pages/partials/_header.html.erb
@@ -1,13 +1,10 @@
 <div class="dark-header" style="margin-bottom: 90px;">
   <header id="header">
-    <div class="container">
+    <div class="container-fluid">
 
-      <div id="logo" class="pull-left">
+      <div class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
-        <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="<%= main_app.root_url(subdomain: "www") %>#intro" class="scrollto">
-          <%= image_tag "ado-landing-pages/logo.png", alt: app_name %>
-        </a>
+        <h1 class="ado-logo"><a href="<%= main_app.root_url(subdomain: "www") %>#intro">Ado<span>Pi</span>Soft</a></h1>
       </div>
 
       <nav id="nav-menu-container">
