--- a/app/views/ado-landing-pages/partials/_machine_issues.html.erb
+++ b/app/views/ado-landing-pages/partials/_machine_issues.html.erb
@@ -1,6 +1,6 @@
 <div class="alert alert-info">
   <p>
-  <em><%= app_name %></em> is <strong>not responsible</strong> for the following matters:
+  <span class="ado-logo"><a style="color: #000;">Ado<span>Pi</span>Soft</a></span> is <strong>not responsible</strong> for the following matters:
   </p>
   <ul>
     <li>
