--- a/app/views/ado-landing-pages/checkout/index.html.erb
+++ b/app/views/ado-landing-pages/checkout/index.html.erb
@@ -92,7 +92,7 @@
     <hr>
 
     <section class="text-center">
-      <img src="/assets/checkout/instapay.png" style="width: 100%; max-width: 250px;">
+      <%= image_tag "checkout/instapay.png", style: 'width: 100%; max-width: 250px;' %>
     </section>
 
   </section>
