--- a/app/views/ado-landing-pages/changelogs.html.erb
+++ b/app/views/ado-landing-pages/changelogs.html.erb
@@ -12,7 +12,7 @@
         <p>
         Description:
         </p>
-        <pre><%= c.description %></pre>
+        <%= markdown(c.description) %>
       </li>
     <% end %>
   </ul>
