--- a/app/views/ado-landing-pages/index.html.erb
+++ b/app/views/ado-landing-pages/index.html.erb
@@ -6,6 +6,7 @@
 <% content_for :content do %>
   <%= render 'ado-landing-pages/partials/intro' %>
   <%= render 'ado-landing-pages/partials/about' %>
+  <%= render 'ado-landing-pages/partials/latest_news' %>
   <%= render 'ado-landing-pages/partials/features' %>
   <%= render 'ado-landing-pages/partials/how_it_works' %>
   <%= render 'ado-landing-pages/partials/buy_now' %>
