--- a/app/views/layouts/ado-landing-pages.html.erb
+++ b/app/views/layouts/ado-landing-pages.html.erb
@@ -9,6 +9,7 @@
     <meta content="" name="description">
 
     <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
 
     <%= render 'ado-landing-pages/partials/favicons' %>
 
