fix support email in checkout#index view

--- a/app/views/ado-landing-pages/checkout/index.html.erb
+++ b/app/views/ado-landing-pages/checkout/index.html.erb
@@ -103,7 +103,7 @@
     <!--Coins.ph wallet: <strong>3NtzxpxqfPYJuYdAV5aSMcYCYLV76LA7Wg</strong>-->
     <!--</p>-->
     <p>
-    For those with no paypal accounts, you can send the payment through <b>bank deposite to Unionbank</b>. Please email to <a href="mailto:support@adopisowifi.com">support@adopisowifi.com</a> for details.
+    For those with no paypal accounts, you can send the payment through <b>bank deposite to Unionbank</b>. Please email to <a href="mailto:<%= support_email %>"><%= support_email %></a> for details.
     </p>
     <h3>
       Trial Period
