--- a/app/views/layouts/ado-landing-pages.html.erb
+++ b/app/views/layouts/ado-landing-pages.html.erb
@@ -2,6 +2,17 @@
 <html lang="en">
 
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48961811-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-48961811-3');
+    </script>
+
     <meta charset="utf-8">
     <title>AdoPiSoft | <%= @page_title or "WiFi Hotspot Mangement Software"%></title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -40,7 +51,7 @@
     <% else %>
       <div class="container">
         <div class="section">
-        <%= yield %>
+          <%= yield %>
         </div>
       </div>
     <% end %>
