--- a/app/views/ado-landing-pages/partials/_machine_issues.html.erb
+++ b/app/views/ado-landing-pages/partials/_machine_issues.html.erb
@@ -15,7 +15,7 @@
   </ul>
 
   <p>
-  If you have problem or issues with your machine bought from distributors, please <a href="<%= main_app.buy_url %>">contact the distributor</a> or ask in the <%= link_to "forum", thredded_url %>. Sellers/distributors buy our software to manufacture their product. We are not liable for any transactions between the buyer and distributor.
+  If you have problem or issues with your machine bought from distributors, please <a href="<%= main_app.buy_url %>">contact the distributor</a> or ask in the <%= link_to "forum", thredded_url %>. Sellers/distributors buy our software to manufacture their product. <strong>We only have responsibilility for distributors (and invidual license buyer) as buyer of our software.</strong>
   </p>
 
 </div>
