--- a/app/views/ado-landing-pages/distributors.html.erb
+++ b/app/views/ado-landing-pages/distributors.html.erb
@@ -7,6 +7,9 @@
 Machines are built and assembled by distributors. Each may have different design, specifications and pricing so <em>please contact the distributor nearest your location for inquiries</em>.
 <p>
 
+<div class="alert alert-info">
+  NOTE: To know more about the background and history of distributor, click on "View Profile".
+</div>
 
 <div id="distributors" ng-controller="DistributorsCtrl">
 
