meta robots partial

--- a/app/views/layouts/ado-landing-pages.html.erb
+++ b/app/views/layouts/ado-landing-pages.html.erb
@@ -3,6 +3,8 @@
 
   <head>
 
+    <%= render 'ado-landing-pages/partials/meta_robots' %>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48961811-3"></script>
     <script>
