--- a/app/assets/stylesheets/ado-landing-pages.css
+++ b/app/assets/stylesheets/ado-landing-pages.css
@@ -9,7 +9,10 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
+ * 
+ * NOTE: thredded is used in user_profile.html.erb only
 
+ *= require thredded
  *= require font-awesome 
  *= require ado-landing-pages/libs/bootstrap
  *= require ado-landing-pages/libs/animate
