--- a/app/views/ado-landing-pages/distributors.html.erb
+++ b/app/views/ado-landing-pages/distributors.html.erb
@@ -1,3 +1,9 @@
+<% content_for :head do %>
+  <script>
+    window.DISTRIBUTORS = <%= raw @distributors.to_json(only: [:website_url, :website_name, :display_name], include: [:user]) %>;
+  </script>
+<% end %>
+
 <%= render 'ado-landing-pages/partials/machine_issues' %>
 
 <h2>Official Distributors List</h2>
@@ -75,19 +81,4 @@ Machines are built and assembled by distributors. Each may have different design
   </table>
 </div>
 
-<% content_for :javascripts do %>
-  <script type="text/javascript">
-    $(function () {
-      angular.module('AdoDistributors', []).controller('DistributorsCtrl', [
-        '$scope',
-        function ($scope) {
-          $scope.distributors = <%= raw @distributors.to_json(only: [:website_url, :website_name, :display_name], include: [:user]) %>;
-        }
-      ]);
-
-      angular.bootstrap(window.document.getElementById("distributors"), ["AdoDistributors"]);
-
-    });
-  </script>
-<% end %>
 
